Add prevent empty farmland trampling